CHANGELOG FOR ATOMSK
====================

Beta 0.9.10 (30 Nov. 2017)
--------------------------
- fixed a bug in interactive mode, where the program would crash if the user simply entered a tabulation character.
- fixed problem of precision of ion charges when writing LAMMPS data files.
- fixed a bug in option "-dislocation", where edge dislocations were not constructed correctly when using anisotropic elasticity. Thanks to Matous Mrovec, ICAMS, Ruhr-Universität Bochum, Germany, for pointing out this bug.
- fixed a misplaced message in option "-remove-atoms".


Beta 0.9.9 (16 Oct. 2017)
-------------------------
- in mode "--create", added possibility to create fluorite lattice. Thanks to Jonathan Amodeo, MATEIS, Lyon, France, for implementing this feature.
- fixed a bug when reading GULP files, that caused a crash when shells were not present. Thanks to Srinivasan Mahendran, UMET, Lille, France, for pointing out this bug.
- fixed a bug where atom species were not always recognized when written in all uppercase or all lowercase letters (e.g. ("PB" instead of "Pb").


Beta 0.9.8 (5 Oct. 2017)
------------------------
- fixed a bug in option "-add-atoms", that caused a crash when auxiliary properties were defined. Thanks to Srinivasan Mahendran, UMET, Lille, France, for pointing out this bug.
- fixed bugs in the display of messages when applying symmetry operations.


Beta 0.9.7 (21 Sept. 2017)
-------------------------
- fixed a bug in option "-remove-atoms", where the selection was not cleared after removing selected atoms. Thanks to Alexandra Goryaeva, INSA Lyon, France, for pointing out this bug.


Beta 0.9.6 (04 Aug. 2017)
-------------------------
- fixed a bug in option "-dislocation", where the anisotropic displacements would not be correct when the dislocation line was not along the Cartesian Z axis. Thanks to Hui Liu, McGill University, Montreal, Canada, for pointing out this bug.


Beta 0.9.5 (09 May 2017)
------------------------