@@ -13,7 +13,7 @@
 
 <p><strong><em>Atom</em>/<em>M</em>olecule/<em>M</em>aterial <em>S</em>oftware <em>K</em>it</strong></p>
 
-<p>&copy; Pierre Hirel 2010 - Version Beta-0.9.9</p>
+<p>&copy; Pierre Hirel 2010 - Version Beta-0.9.10</p>
 
 
 <h2>Contents:</h2>
