@@ -29,6 +29,8 @@
 <ul>
   <li class="clist"><strong>help</strong> Display a summary of commands</li>
   <li class="clist"><strong>ls</strong> Display a list of files in the current directory</li>
+  <li class="clist"><strong>cd</strong> Change directory</li>
+  <li class="clist"><strong>pwd</strong> Display full path to current directory</li>
   <li class="clist"><strong>create</strong> Create a system from scratch</li>
   <li class="clist"><strong>read &#60;file&#62;</strong> Read the &#60;file&#62; and load its content in memory</li>
   <li class="clist"><strong>memory</strong> Display a summary of the memory used</li>
