@@ -29,6 +29,8 @@
 <ul>
   <li class="clist"><strong>help</strong> Affiche une liste des commandes disponibles</li>
   <li class="clist"><strong>ls</strong> Affiche une liste des fichiers du dossier courant</li>
+  <li class="clist"><strong>cd</strong> Change de dossier</li>
+  <li class="clist"><strong>pwd</strong> Affiche le dossier courant</li>
   <li class="clist"><strong>create</strong> Crée un système atomique</li>
   <li class="clist"><strong>read &#60;fichier&#62;</strong> Lit le &#60;fichier&#62; et le charge en mémoire</li>
   <li class="clist"><strong>memory</strong> Affiche un résumé de l'utilisation mémoire courante</li>
