@@ -10,7 +10,7 @@ MODULE messages_EN
 !*     Unité Matériaux Et Transformations (UMET),                                 *
 !*     Université de Lille 1, Bâtiment C6, F-59655 Villeneuve D'Ascq (FRANCE)     *
 !*     pierre.hirel@univ-lille1.fr                                                *
-!* Last modification: P. Hirel - 28 Feb. 2017                                     *
+!* Last modification: P. Hirel - 07 Dec. 2017                                     *
 !**********************************************************************************
 !* This program is free software: you can redistribute it and/or modify           *
 !* it under the terms of the GNU General Public License as published by           *
@@ -780,6 +780,9 @@ CASE(812)
   !strings(1) = non-conformal symmetry operation string
   msg = "X!X ERROR: failed to interpret the symmetry operations '"// &
       & TRIM(strings(1))//"'."
+  CALL DISPLAY_MSG(1,msg,logfile)
+CASE(813)
+  msg = "X!X ERROR: no such file or directory"
   CALL DISPLAY_MSG(1,msg,logfile)
 !
 ! 900- 999: DEBUG MESSAGES
@@ -2244,15 +2247,20 @@ CASE(4023)
   CALL DISPLAY_MSG(verbosity,msg,logfile)
   msg = "help              Display this help"
   CALL DISPLAY_MSG(verbosity,msg,logfile)
-  msg = system_ls//"               List files in current directory"
+  msg = system_ls
+  WRITE(msg(18:),*) "List files in current directory"
   CALL DISPLAY_MSG(verbosity,msg,logfile)
-  msg = "memory            Summary of what is in memory"
+  msg = "cd                Change current directory"
+  CALL DISPLAY_MSG(verbosity,msg,logfile)
+  msg = "pwd               Display the full path to current working directory"
   CALL DISPLAY_MSG(verbosity,msg,logfile)
   msg = "create            Create an atomic system"
   CALL DISPLAY_MSG(verbosity,msg,logfile)
   msg = "read <file>       Read the <file> and load its content in memory"
   CALL DISPLAY_MSG(verbosity,msg,logfile)
   msg = "write <file>      Write current system into <file>"
+  CALL DISPLAY_MSG(verbosity,msg,logfile)
+  msg = "memory            Summary of what is in memory"
   CALL DISPLAY_MSG(verbosity,msg,logfile)
   msg = "clear             Clear memory (destroy atomic system)"
   CALL DISPLAY_MSG(verbosity,msg,logfile)
